--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
             alt="header-logo"
           />
 
-          <div class="header__about-us">
-            <span>О нас</span>
-          </div>
+          <div class="header__about-us"><a href="#about">О нас</a></div>
           <div class="header__working">
-            <span>Как мы работаем</span>
+            <a href="#how-we-work">Как мы работаем</a>
           </div>
           <div class="header__services">
-            <span>Услуги</span>
+            <a href="#services">Услуги</a>
           </div>
           <div class="header__favourites">
-            <span>Избранные кейсы</span>
+            <a href="#favourites">Избранные кейсы</a>
           </div>
         </div>
         <div class="header__button">
@@ -59,7 +57,7 @@
           </div>
           <div class="welcome-screen__picture"></div>
         </div>
-        <div class="about-us">
+        <div id="about" class="about-us">
           <content class="about-us__content">
             <div class="about-us__header">
               <div class="about-us__text">
@@ -137,7 +135,7 @@
             </div>
           </content>
         </div>
-        <div class="how-we-work">
+        <div id="how-we-work" class="how-we-work">
           <div class="how-we-work__left-wrapper">
             <div class="how-we-work__left-content">
               <div class="how-we-work__title">
@@ -166,7 +164,7 @@
             </div>
           </div>
         </div>
-        <div class="services">
+        <div id="services" class="services">
           <div class="services__title">
             <h2>Услуги</h2>
           </div>
@@ -245,7 +243,7 @@
             </div>
           </div>
         </div>
-        <div class="selected-cases">
+        <div id="favourites" class="selected-cases">
           <div class="selected-cases__title">
             <h2>Избранные кейсы</h2>
           </div>
