--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,9 +37,9 @@
           <div class="header__favourites">
             <a href="#favourites">Избранные кейсы</a>
           </div>
-        </div>
-        <div class="header__button">
-          <button>Написать нам</button>
+          <div class="header__button">
+            <button>Написать нам</button>
+          </div>
         </div>
       </header>
       <main>
