--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@
                 </div>
                 <div class="services__button">
                   <button>Написать нам</button>
+                  <img
+                    class="new-button-img"
+                    src="./src/images/services-img-1.png"
+                    alt="services-1"
+                  />
                 </div>
               </div>
 
@@ -276,6 +281,11 @@
                 </div>
                 <div class="services__button">
                   <button>Написать нам</button>
+                  <img
+                    class="new-button-img"
+                    src="./src/images/services-img-2.png"
+                    alt="services-2"
+                  />
                 </div>
               </div>
 
@@ -294,6 +304,11 @@
                 </div>
                 <div class="services__button">
                   <button>Написать нам</button>
+                  <img
+                    class="new-button-img"
+                    src="./src/images/services-img-3.png"
+                    alt="services-3"
+                  />
                 </div>
               </div>
 
@@ -312,6 +327,11 @@
                 </div>
                 <div class="services__button">
                   <button>Написать нам</button>
+                  <img
+                    class="new-button-img"
+                    src="./src/images/services-img-4.png"
+                    alt="services-4"
+                  />
                 </div>
               </div>
 
