--- a/index.html
+++ b/index.html
@@ -20,13 +20,42 @@
   <body>
     <div id="app">
       <header class="header">
+        <nav>
+          <div class="navbar">
+            <div class="container nav-container">
+              <input class="checkbox" type="checkbox" name="" id="" />
+              <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+              </div>
+              <div class="logo">
+                <img
+                  class="header__logo logo"
+                  src="./src/images/header-logo.png"
+                  alt="header-logo"
+                />
+              </div>
+              <div class="menu-items">
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Как мы работаем</a></li>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="#">Избранные кейсы</a></li>
+                <img
+                  class="header__logo"
+                  src="./src/images/header-logo.png"
+                  alt="header-logo"
+                />
+              </div>
+            </div>
+          </div>
+        </nav>
         <div class="header__wrapper">
           <img
             class="header__logo"
             src="./src/images/header-logo.png"
             alt="header-logo"
           />
-
           <div class="header__about-us"><a href="#about">О нас</a></div>
           <div class="header__working">
             <a href="#how-we-work">Как мы работаем</a>
