--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
           <div class="navbar">
             <div class="container nav-container">
-              <input class="checkbox" type="checkbox" name="" id="" />
+              <input class="checkbox" type="checkbox" name="" id="toggle" />
               <div class="hamburger-lines">
                 <span class="line line1"></span>
                 <span class="line line2"></span>
@@ -37,10 +37,20 @@
                 />
               </div>
               <div class="menu-items">
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Как мы работаем</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Избранные кейсы</a></li>
+                <li><a href="#about" onclick="closeMenu()">О нас</a></li>
+                <li>
+                  <a href="#how-we-work" onclick="closeMenu()"
+                    >Как мы работаем</a
+                  >
+                </li>
+                <li>
+                  <a href="#services" onclick="closeMenu()">Услуги</a>
+                </li>
+                <li>
+                  <a href="#favourites" onclick="closeMenu()"
+                    >Избранные кейсы</a
+                  >
+                </li>
                 <img
                   class="header__logo"
                   src="./src/images/header-logo.png"
