--- a/index.html
+++ b/index.html
@@ -37,19 +37,15 @@
                 />
               </div>
               <div class="menu-items">
-                <li><a href="#about" onclick="closeMenu()">О нас</a></li>
+                <li><a href="#about">О нас</a></li>
                 <li>
-                  <a href="#how-we-work" onclick="closeMenu()"
-                    >Как мы работаем</a
-                  >
+                  <a href="#how-we-work">Как мы работаем</a>
                 </li>
                 <li>
-                  <a href="#services" onclick="closeMenu()">Услуги</a>
+                  <a href="#services">Услуги</a>
                 </li>
                 <li>
-                  <a href="#favourites" onclick="closeMenu()"
-                    >Избранные кейсы</a
-                  >
+                  <a href="#favourites">Избранные кейсы</a>
                 </li>
                 <img
                   class="header__logo"
