--- a/index.html
+++ b/index.html
@@ -176,8 +176,22 @@
         </div>
 
         <div id="how-we-work" class="how-we-work">
-          <div class="how-we-work__wrapper">
-            <div class="how-we-work__block description">
+          <main>
+            <section>
+              <h1>Beep</h1>
+            </section>
+            <section>
+              <h1>Boop</h1>
+            </section>
+            <section>
+              <h1>Boooom</h1>
+            </section>
+            <section>
+              <h1>The End</h1>
+            </section>
+          </main>
+          <!-- <div class="how-we-work__wrapper">
+            <div class="how-we-work__block description section">
               <div class="how-we-work__title">
                 <h1>Как мы работаем</h1>
                 <p>
@@ -186,7 +200,7 @@
                 </p>
               </div>
             </div>
-            <div class="how-we-work__right-content step-1">
+            <div class="how-we-work__right-content step-1 section">
               <div class="how-we-work__text">
                 <span>Шаг 1</span>
                 <h1>Изучение проекта</h1>
@@ -197,10 +211,10 @@
                 </p>
               </div>
               <div class="how-we-work__picture">
-                <img src="./src/images/step1.png" alt="step1" />
+                <img src="./src/images/step1.png" alt="step1 " />
               </div>
             </div>
-            <div class="how-we-work__right-content step-2">
+            <div class="how-we-work__right-content step-2 section">
               <div class="how-we-work__text">
                 <span>Шаг 2</span>
                 <h1>Проектирование</h1>
@@ -213,7 +227,7 @@
                 <img src="./src/images/step2.png" alt="step2" />
               </div>
             </div>
-            <div class="how-we-work__right-content step-3">
+            <div class="how-we-work__right-content step-3 section">
               <div class="how-we-work__text">
                 <span>Шаг 3</span>
                 <h1>Реализация проект</h1>
@@ -228,7 +242,7 @@
                 <img src="./src/images/step3.png" alt="step3" />
               </div>
             </div>
-            <div class="how-we-work__right-content step-4">
+            <div class="how-we-work__right-content step-4 section">
               <div class="how-we-work__text">
                 <span>Шаг 4</span>
                 <h1>Публикация и поддержка</h1>
@@ -242,7 +256,7 @@
                 <img src="./src/images/step4.png" alt="step4" />
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div id="services" class="services">
