--- a/index.html
+++ b/index.html
@@ -175,89 +175,90 @@
           </content>
         </div>
 
-        <!-- <div id="how-we-work" class="how-we-work"> -->
-        <div class="sticky-container">
-          <main>
-            <section>
-              <div class="how-we-work__block description">
-                <div class="how-we-work__title">
-                  <h1>Как мы работаем</h1>
-                  <p>
-                    Мы придерживаемся индивидуальному подходу в решении задач.
-                    Однако в общих чертах любой проект разрабатывается в 4 шага
-                  </p>
+        <div id="how-we-work" class="how-we-work">
+          <div class="sticky-container">
+            <main>
+              <section>
+                <div class="how-we-work__block description">
+                  <div class="how-we-work__title">
+                    <h1>Как мы работаем</h1>
+                    <p>
+                      Мы придерживаемся индивидуальному подходу в решении задач.
+                      Однако в общих чертах любой проект разрабатывается в 4
+                      шага
+                    </p>
+                  </div>
                 </div>
-              </div>
-            </section>
-            <section>
-              <div class="how-we-work__right-content step-1">
-                <div class="how-we-work__text">
-                  <span>Шаг 1</span>
-                  <h1>Изучение проекта</h1>
-                  <p>
-                    Мы тщательно изучаем поставленную задачу, уточним у вас все
-                    детали и ограничения проекта, после чего предложим варианты
-                    решения
-                  </p>
+              </section>
+              <section>
+                <div class="how-we-work__right-content step-1">
+                  <div class="how-we-work__text">
+                    <span>Шаг 1</span>
+                    <h1>Изучение проекта</h1>
+                    <p>
+                      Мы тщательно изучаем поставленную задачу, уточним у вас
+                      все детали и ограничения проекта, после чего предложим
+                      варианты решения
+                    </p>
+                  </div>
+                  <div class="how-we-work__picture">
+                    <img src="./src/images/step1.png" alt="step1 " />
+                  </div>
                 </div>
-                <div class="how-we-work__picture">
-                  <img src="./src/images/step1.png" alt="step1 " />
+              </section>
+              <section>
+                <div class="how-we-work__right-content step-2">
+                  <div class="how-we-work__text">
+                    <span>Шаг 2</span>
+                    <h1>Проектирование</h1>
+                    <p>
+                      На основании данных мы проектируем user-flow, архитектуру
+                      проекта, а также планируем задачи и строим roadmap
+                    </p>
+                  </div>
+                  <div class="how-we-work__picture">
+                    <img src="./src/images/step2.png" alt="step2" />
+                  </div>
                 </div>
-              </div>
-            </section>
-            <section>
-              <div class="how-we-work__right-content step-2">
-                <div class="how-we-work__text">
-                  <span>Шаг 2</span>
-                  <h1>Проектирование</h1>
-                  <p>
-                    На основании данных мы проектируем user-flow, архитектуру
-                    проекта, а также планируем задачи и строим roadmap
-                  </p>
+              </section>
+              <section>
+                <div class="how-we-work__right-content step-3">
+                  <div class="how-we-work__text">
+                    <span>Шаг 3</span>
+                    <h1>Реализация проект</h1>
+                    <p>
+                      Этот шаг можно декомпозироват на множество шагов:
+                      построение архитектуры сервиса, аналитика
+                      бизнес-процессов, брендинг, дизайн посадочных страниц,
+                      развёртывание ПО, программирование, SEO и таргетинг
+                    </p>
+                  </div>
+                  <div class="how-we-work__picture">
+                    <img src="./src/images/step3.png" alt="step3" />
+                  </div>
                 </div>
-                <div class="how-we-work__picture">
-                  <img src="./src/images/step2.png" alt="step2" />
+              </section>
+              <section>
+                <div class="how-we-work__right-content step-4 section">
+                  <div class="how-we-work__text">
+                    <span>Шаг 4</span>
+                    <h1>Публикация и поддержка</h1>
+                    <p>
+                      После реализации продукта, мы тщательно тестируем
+                      разработанное решение, после чего поддерживаем
+                      его работоспособность даже после завершения проекта
+                    </p>
+                  </div>
+                  <div class="how-we-work__picture">
+                    <img src="./src/images/step4.png" alt="step4" />
+                  </div>
                 </div>
-              </div>
-            </section>
-            <section>
-              <div class="how-we-work__right-content step-3">
-                <div class="how-we-work__text">
-                  <span>Шаг 3</span>
-                  <h1>Реализация проект</h1>
-                  <p>
-                    Этот шаг можно декомпозироват на множество шагов: построение
-                    архитектуры сервиса, аналитика бизнес-процессов, брендинг,
-                    дизайн посадочных страниц, развёртывание ПО,
-                    программирование, SEO и таргетинг
-                  </p>
-                </div>
-                <div class="how-we-work__picture">
-                  <img src="./src/images/step3.png" alt="step3" />
-                </div>
-              </div>
-            </section>
-            <section>
-              <div class="how-we-work__right-content step-4 section">
-                <div class="how-we-work__text">
-                  <span>Шаг 4</span>
-                  <h1>Публикация и поддержка</h1>
-                  <p>
-                    После реализации продукта, мы тщательно тестируем
-                    разработанное решение, после чего поддерживаем
-                    его работоспособность даже после завершения проекта
-                  </p>
-                </div>
-                <div class="how-we-work__picture">
-                  <img src="./src/images/step4.png" alt="step4" />
-                </div>
-              </div>
-            </section>
-          </main>
+              </section>
+            </main>
 
-          <!-- </div> -->
-        </div>
-        <!-- <div class="how-we-work__wrapper">
+            <!-- </div> -->
+          </div>
+          <!-- <div class="how-we-work__wrapper">
             <div class="how-we-work__block description section">
               <div class="how-we-work__title">
                 <h1>Как мы работаем</h1>
@@ -324,7 +325,7 @@
               </div>
             </div>
           </div> -->
-        <!-- </div> -->
+        </div>
 
         <div id="services" class="services">
           <div class="services__title">
