--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </div>
               </section>
               <section>
-                <div class="how-we-work__right-content step-1">
+                <div class="how-we-work__block steps">
                   <div class="how-we-work__text">
                     <span>Шаг 1</span>
                     <h1>Изучение проекта</h1>
@@ -207,7 +207,7 @@
                 </div>
               </section>
               <section>
-                <div class="how-we-work__right-content step-2">
+                <div class="how-we-work__block steps">
                   <div class="how-we-work__text">
                     <span>Шаг 2</span>
                     <h1>Проектирование</h1>
@@ -222,7 +222,7 @@
                 </div>
               </section>
               <section>
-                <div class="how-we-work__right-content step-3">
+                <div class="how-we-work__block steps">
                   <div class="how-we-work__text">
                     <span>Шаг 3</span>
                     <h1>Реализация проект</h1>
@@ -239,7 +239,7 @@
                 </div>
               </section>
               <section>
-                <div class="how-we-work__right-content step-4 section">
+                <div class="how-we-work__block steps">
                   <div class="how-we-work__text">
                     <span>Шаг 4</span>
                     <h1>Публикация и поддержка</h1>
