--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
                 <span class="line line3"></span>
               </div>
               <div class="logo">
-                <img
-                  class="header__logo logo"
-                  src="./src/images/header-logo.png"
-                  alt="header-logo"
-                />
+                <a href="/">
+                  <img
+                    class="header__logo"
+                    src="./src/images/header-logo.png"
+                    alt="header-logo"
+                /></a>
               </div>
               <div class="menu-items">
-                <li><a href="#about">О нас</a></li>
+                <li><a href="#about-us">О нас</a></li>
                 <li>
                   <a href="#how-we-work">Как мы работаем</a>
                 </li>
@@ -44,13 +45,14 @@
                   <a href="#services">Услуги</a>
                 </li>
                 <li>
-                  <a href="#favourites">Избранные кейсы</a>
+                  <a href="#selected-cases">Избранные кейсы</a>
                 </li>
-                <img
-                  class="header__logo"
-                  src="./src/images/header-logo.png"
-                  alt="header-logo"
-                />
+                <a href="/">
+                  <img
+                    class="header__logo"
+                    src="./src/images/header-logo.png"
+                    alt="header-logo"
+                /></a>
               </div>
             </div>
           </div>
@@ -97,7 +99,7 @@
           </div>
           <div class="welcome-screen__picture"></div>
         </div>
-        <div id="about" class="about-us">
+        <div id="about-us" class="about-us">
           <content class="about-us__content">
             <div class="about-us__header">
               <div class="about-us__text">
@@ -427,7 +429,7 @@
             </div>
           </div>
         </div>
-        <div id="favourites" class="selected-cases">
+        <div id="selected-cases" class="selected-cases">
           <div class="selected-cases__title">
             <h2>Избранные кейсы</h2>
           </div>
