--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
             </div>
           </content>
         </div>
+        <div class="parent">
+          <section class="test">
+            <div class="test__wrapper">1</div>
+            <div class="test__wrapper">2</div>
+            <div class="test__wrapper">3</div>
+            <div class="test__wrapper">4</div>
+            <div class="test__wrapper">5</div>
+            <div class="test__wrapper">6</div>
+            <div class="test__wrapper">7</div>
+            <div class="test__wrapper">8</div>
+            <div class="test__wrapper">9</div>
+            <div class="test__wrapper">10</div>
+          </section>
+        </div>
 
         <div id="how-we-work" class="how-we-work">
           <div class="sticky-container">
