--- a/index.html
+++ b/index.html
@@ -179,16 +179,26 @@
         </div>
         <div class="parent">
           <section class="test">
-            <div class="test__wrapper">1</div>
-            <div class="test__wrapper">2</div>
-            <div class="test__wrapper">3</div>
-            <div class="test__wrapper">4</div>
-            <div class="test__wrapper">5</div>
-            <div class="test__wrapper">6</div>
-            <div class="test__wrapper">7</div>
-            <div class="test__wrapper">8</div>
-            <div class="test__wrapper">9</div>
-            <div class="test__wrapper">10</div>
+            <div class="test__wrapper">
+              <span class="anchor" id="test-1"></span>
+              1
+            </div>
+            <div class="test__wrapper">
+              <span class="anchor" id="test-2"></span>
+              2
+            </div>
+            <div class="test__wrapper">
+              <span class="anchor" id="test-3"></span>
+              3
+            </div>
+            <div class="test__wrapper">
+              <span class="anchor" id="test-4"></span>
+              4
+            </div>
+            <div class="test__wrapper">
+              <span class="anchor" id="test-5"></span>
+              5
+            </div>
           </section>
         </div>
 
