--- a/index.html
+++ b/index.html
@@ -180,23 +180,23 @@
         <div class="parent">
           <section class="test">
             <div class="test__wrapper">
-              <span class="anchor" id="test-1"></span>
+              <span class="anchor"></span>
               1
             </div>
             <div class="test__wrapper">
-              <span class="anchor" id="test-2"></span>
+              <span class="anchor"></span>
               2
             </div>
             <div class="test__wrapper">
-              <span class="anchor" id="test-3"></span>
+              <span class="anchor"></span>
               3
             </div>
             <div class="test__wrapper">
-              <span class="anchor" id="test-4"></span>
+              <span class="anchor"></span>
               4
             </div>
             <div class="test__wrapper">
-              <span class="anchor" id="test-5"></span>
+              <span class="anchor"></span>
               5
             </div>
           </section>
