--- a/index.html
+++ b/index.html
@@ -188,7 +188,15 @@
               quis metus. Nam ac mollis felis. Fusce ut quam at tellus maximus
               pharetra.
             </div>
-            <div class="section_item item2">Item 2</div>
+            <div class="section_item item2">
+              Item 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque accumsan lacus sit amet libero efficitur, non
+              pharetra elit pulvinar. Etiam vestibulum magna nec blandit
+              imperdiet. Morbi suscipit congue orci vel pharetra. Aliquam vitae
+              aliquet nunc. Fusce vel nulla at urna interdum volutpat elementum
+              quis metus. Nam ac mollis felis. Fusce ut quam at tellus maximus
+              pharetra.
+            </div>
             <div class="section_item item3">Item 3</div>
             <div class="section_item item4">Item 4</div>
             <div class="section_item item5">Item 5</div>
